GeneradorReportes async, build.xml para JAR, configuracion y README completo